@@ -15,9 +15,9 @@
                        plot = plot, previous.best = previous.best, ...)
     maxdis <- attr(dis, "maxdis")
     if (is.null(maxdis)) 
-        maxdis <- max(dis)
+        maxdis <- abs(max(dis) - 1) < 1e-4
     points <- postMDS(out$points, dis, plot = max(0, plot - 1), 
-                      halfchange = (maxdis < 1.1), ...)
+                      halfchange = maxdis, ...)
     if (is.null(rownames(points))) 
         rownames(points) <- rownames(comm)
     if (wascores) {
@@ -34,4 +34,3 @@
     class(out) <- "metaMDS"
     out
 }
-
